--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,3 +10,7 @@ services:
       BLACKFIRE_LOG_LEVEL: 4
     ports: [8307]
 ###< blackfireio/blackfire-symfony-meta ###
+  database:
+    ports:
+      - "5432"
+###< doctrine/doctrine-bundle ###
