--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-        charset: utf8mb4
+        charset: utf8
         default_table_options:
             charset: utf8
             collate: utf8_general_ci
