--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0.2",
+        "ext-cassandra": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-iconv": "*",
@@ -29,11 +30,11 @@
         "symfony/validator": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "*",
         "symfonycasts/verify-email-bundle": "^1.10",
         "symfonycorp/platformsh-meta": "^1.0",
         "twig/extra-bundle": "^3.3",
-        "twig/intl-extra": "^3.3",
-      "ext-cassandra": "*"
+        "twig/intl-extra": "^3.3"
     },
     "config": {
         "allow-plugins": {
