--- a/.env
+++ b/.env
@@ -34,5 +34,7 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:49156/app?serverVersion=13
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
- MAILER_DSN=null://null
+MAILER_DSN=null://null
 ###< symfony/mailer ###
+OAUTH_FACEBOOK_ID=659958005291463
+OAUTH_FACEBOOK_SECRET=2340e52062ad6dfef5bdbbcf289f5b5e
