--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0.2",
-        "ext-cassandra": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-iconv": "*",
@@ -13,6 +12,8 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "knpuniversity/oauth2-client-bundle": "*",
+        "league/oauth2-facebook": "^2.2",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
