--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/http-client": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/mime": "6.0.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
@@ -89,6 +90,7 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/stopwatch": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*"
