--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,19 +14,9 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        facebook:
-            pattern: ^/
-            provider: app_user_provider
-            custom_authenticators:
-                - App\Security\FacebookAuthenticator
-            logout:
-                path: app_logout
-
         main:
             lazy: true
+            pattern: /login
             provider: app_user_provider
             form_login:
                 # "login" is the name of the route created previously
@@ -34,6 +24,17 @@ security:
                 check_path: app_login
             logout:
                 path: app_logout
+        dev:
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+        facebook:
+            provider: app_user_provider
+            custom_authenticators:
+                - App\Security\FacebookAuthenticator
+            logout:
+                path: app_logout
+
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
