--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,13 +12,14 @@ framework:
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
 
-    #esi: true
+    esi: true
     #fragments: true
     php_errors:
         log: true
 
 when@test:
     framework:
+        http_cache: true
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
