--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -10,6 +10,7 @@ dependencies:
 
 relationships:
     database: "database:postgresql"
+    varnishstats: 'app:http+stats'
 
 runtime:
     extensions:
