--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "knpuniversity/oauth2-client-bundle": "*",
         "league/oauth2-facebook": "^2.2",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
