--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@
 APP_ENV=prod
 APP_SECRET=ed52056c64d1d6460ad80e70f2e56f60
 ###< symfony/framework-bundle ###
+#DATABASE_URL=mysql://reveu1809831:fX7-a9F_Z6XQz$A@185.98.131.176:3306/reveu1809831
 
 ###> blackfireio/blackfire-symfony-meta ###
 # Get your SERVER credentials at https://blackfire.io/my/settings/credentials
@@ -34,7 +35,7 @@ APP_SECRET=ed52056c64d1d6460ad80e70f2e56f60
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+#MAILER_DSN=null://null
 ###< symfony/mailer ###
 OAUTH_FACEBOOK_ID=659958005291463
 OAUTH_FACEBOOK_SECRET=2340e52062ad6dfef5bdbbcf289f5b5e
