--- a/.env.prod
+++ b/.env.prod
@@ -35,7 +35,7 @@ DATABASE_URL='mysql://reveu1809831:fX7-a9F_Z6XQz$A@185.98.131.176:3306/reveu1809
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp:contact@reveurdream.com:hD7$tHa6Nr8_mFe@mail53.lwspanel.com:465
+MAILER_DSN='smtp://contact@reveurdream.com:hD7$tHa6Nr8_mFe@mail53.lwspanel.com:465'
 ###< symfony/mailer ###
 OAUTH_FACEBOOK_ID=659958005291463
 OAUTH_FACEBOOK_SECRET=2340e52062ad6dfef5bdbbcf289f5b5e
